--- a/blog.html
+++ b/blog.html
@@ -54,7 +54,7 @@
                 <h1 class="colorSecundario animated fadeInLeft" style="animation-delay: 0.5s">Notas de Interés</h1>
                 <div class="row">
                     <div class="col-xxl-10 col-md-10 col-sm-12">
-                        <div class="card-body">
+                        <div class="card-body ">
                             <div class="row">
                                 <div class="col-xxl-10 col-md-12 col-sm-12">
                                     <h3>Nº1 Cómo pensar una narrativa de triple impacto para conversar con la sociedad</h3>
@@ -65,7 +65,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-body card-text">
+                            <div class="card-body card-text cardBlog">
                                 <p>Desde nuestras distintas áreas profesionales -asuntos públicos,
                                     comunicaciones y sostenibilidad- tenemos la intención de comunicar nuestro Triple
                                     Impacto: cómo aportamos en lo social, ambiental y económico.
@@ -172,7 +172,7 @@
                                     <p class="italicFont">
                                         Responsable de Asuntos Públicos en Danone. Miembro de la Comisión Mandos Medios
                                         del
-                                        Consejo Profesional de Relaciones Públicas. Amante del Café de especialidad.
+                                        Consejo Profesional de Relaciones Públicas. Amante del Café de especialidad.<span> </span>
                                     </p>
                                 </div>
 
@@ -181,10 +181,10 @@
                                     <div>
                                         <a id="btnNota1" class="btn btn-dark justify-content-center">Continuar leyendo</a>
                                     </div>
-                                    <div class="marginDivBtn">
+                                    <!-- <div class="marginDivBtn">
                                         <a href="https://medium.com/usina/triple-impacto-de-lo-que-no-se-habla-cbc5f8e2919"
                                             class="btn btn-dark justify-content-center">Leer en Web</a>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -204,7 +204,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-body card-text">
+                            <div class="card-body card-text cardBlog">
                                 <p class="colorPrimario boldFont">Como parte de los objetivos institucionales de
                                     trabajar “en cada
                                     etapa de la profesión”, la Comisión de Mandos Medios profundiza y cristaliza sus
@@ -318,10 +318,10 @@
                                     <div>
                                         <a id="btnNota2" class="btn btn-dark justify-content-center">Continuar leyendo</a>
                                     </div>
-                                    <div class="marginDivBtn">
+                                    <!-- <div class="marginDivBtn">
                                         <a href="https://rrpp.org.ar/novedadesDetalle.php?id=216&utm_source=email_marketing&utm_admin=130724&utm_medium=email&utm_campaign="
                                             class="btn btn-dark justify-content-center">Leer en Web</a>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -363,9 +363,9 @@
                 <ul class="nav flex-column">
                     <li class="mb-2">Seguime en mis redes sociales</li>
                     <ul class="list-unstyled d-flex">
-                        <li class="icon"><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
-                        <li class="ms-3 icon"><a class="link-light" href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li class="ms-3 icon"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a>
+                        <li class="icon"><a class="link-light" href="https://www.linkedin.com/in/andrés-rojas-88244b132" target="about_blank"><i class="fab fa-linkedin" ></i></a></li>
+                        <li class="ms-3 icon"><a class="link-light" href="https://www.instagram.com/andyrojaspr/?hl=es-la" target="about_blank"><i class="fab fa-instagram"  ></i></a></li>
+                        <li class="ms-3 icon"><a class="link-light" href="/contacto.html"target="about_blank"><i class="fas fa-envelope-square" ></i></a>
                         </li>
                     </ul>
                 </ul>
