--- a/contacto.html
+++ b/contacto.html
@@ -102,9 +102,9 @@
                 <ul class="nav flex-column">
                     <li class="mb-2">Seguime en mis redes sociales</li>
                     <ul class="list-unstyled d-flex">
-                        <li class="icon"><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
-                        <li class="ms-3 icon"><a class="link-light" href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li class="ms-3 icon"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a>
+                        <li class="icon"><a class="link-light" href="https://www.linkedin.com/in/andrés-rojas-88244b132" target="about_blank"><i class="fab fa-linkedin" ></i></a></li>
+                        <li class="ms-3 icon"><a class="link-light" href="https://www.instagram.com/andyrojaspr/?hl=es-la" target="about_blank"><i class="fab fa-instagram"  ></i></a></li>
+                        <li class="ms-3 icon"><a class="link-light" href="/contacto.html"target="about_blank"><i class="fas fa-envelope-square" ></i></a>
                         </li>
                     </ul>
                 </ul>
