--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="row">
                     <div class="col-xxl-6 col-md-6 col-sm-12">
                         <div class="card" style="width: 18rem;">
-                            <img src="./images/charla1.jfif" class="card-img-top" alt="imgCharla1">
+                            <img src="./images/charla1.jpg" class="card-img-top" alt="imgCharla1">
                             <div class="card-body">
                                 <h4>Issues Management y Comunicación de Crisis
                                 </h4>
@@ -197,9 +197,9 @@
                 <ul class="nav flex-column">
                     <li class="mb-2">Seguime en mis redes sociales</li>
                     <ul class="list-unstyled d-flex">
-                        <li class="icon"><a class="link-light" href="#"><i class="fab fa-linkedin"></i></a></li>
-                        <li class="ms-3 icon"><a class="link-light" href="#"><i class="fab fa-instagram"></i></a></li>
-                        <li class="ms-3 icon"><a class="link-light" href="#"><i class="fas fa-envelope-square"></i></a>
+                        <li class="icon"><a class="link-light" href="https://www.linkedin.com/in/andrés-rojas-88244b132" target="about_blank"><i class="fab fa-linkedin" ></i></a></li>
+                        <li class="ms-3 icon"><a class="link-light" href="https://www.instagram.com/andyrojaspr/?hl=es-la" target="about_blank"><i class="fab fa-instagram"  ></i></a></li>
+                        <li class="ms-3 icon"><a class="link-light" href="/contacto.html"target="about_blank"><i class="fas fa-envelope-square" ></i></a>
                         </li>
                     </ul>
                 </ul>
