--- a/contacto.html
+++ b/contacto.html
@@ -74,27 +74,30 @@
             <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
                 <h5>Servicios</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Asesoramiento Personal</a>
+                    <li class="nav-item mb-2"><a href="/servicios.html" class="nav-link p-0 ">Asesoramiento Personal</a>
                     </li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Capacitación para Empresas</a>
+                    <li class="nav-item mb-2"><a href="/servicios.html" class="nav-link p-0 ">Capacitación para
+                            Empresas</a>
                     </li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Entrevistas a
+                    <li class="nav-item mb-2"><a href="/servicios.html" class="nav-link p-0 ">Entrevistas a
                             Profesionales</a></li>
                 </ul>
             </div>
             <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
                 <h5>Blog</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Noticias de Actualidad</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Charlas a Empresas</a></li>
+                    <li class="nav-item mb-2"><a href="/blog.html" class="nav-link p-0">Noticias de Actualidad</a></li>
+                    <li class="nav-item mb-2"><a href="/blog.html" class="nav-link p-0 ">Charlas a Empresas</a></li>
                 </ul>
             </div>
             <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
                 <h5>Sobre Andy</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Mi experiencia laboral</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Mis Estudios</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Mis objetivos profesionales</a></li>
+                    <li class="nav-item mb-2"><a href="/sobreMi.html" class="nav-link p-0 ">Mi experiencia laboral</a>
+                    </li>
+                    <li class="nav-item mb-2"><a href="/sobreMi.html" class="nav-link p-0 ">Mis Estudios</a></li>
+                    <li class="nav-item mb-2"><a href="/sobreMi.html" class="nav-link p-0 ">Mis objetivos
+                            profesionales</a></li>
                 </ul>
             </div>
             <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
@@ -102,9 +105,13 @@
                 <ul class="nav flex-column">
                     <li class="mb-2">Seguime en mis redes sociales</li>
                     <ul class="list-unstyled d-flex">
-                        <li class="icon"><a class="link-light" href="https://www.linkedin.com/in/andrés-rojas-88244b132" target="about_blank"><i class="fab fa-linkedin" ></i></a></li>
-                        <li class="ms-3 icon"><a class="link-light" href="https://www.instagram.com/andyrojaspr/?hl=es-la" target="about_blank"><i class="fab fa-instagram"  ></i></a></li>
-                        <li class="ms-3 icon"><a class="link-light" href="/contacto.html"target="about_blank"><i class="fas fa-envelope-square" ></i></a>
+                        <li class="icon"><a class="link-light" href="https://www.linkedin.com/in/andrés-rojas-88244b132"
+                                target="about_blank"><i class="fab fa-linkedin"></i></a></li>
+                        <li class="ms-3 icon"><a class="link-light"
+                                href="https://www.instagram.com/andyrojaspr/?hl=es-la" target="about_blank"><i
+                                    class="fab fa-instagram"></i></a></li>
+                        <li class="ms-3 icon"><a class="link-light" href="/contacto.html" target="about_blank"><i
+                                    class="fas fa-envelope-square"></i></a>
                         </li>
                     </ul>
                 </ul>
