--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="images/logoazul.png">
+    <link rel="shortcut icon" href="./images/logoazul.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,8 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand logo" href="/index.html"><img src="./images/logospot.png" width="120x100"></a>
+                <a class="navbar-brand logo" href="/index.html"><img src="./images/logospot.png" width="120x100"
+                        alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -74,13 +75,13 @@
                             de la sociedad. Intentaremos llegar a una síntesis que al menos haga que todos sepamos que
                             piensa el otro y, con esa premisa, tratemos de construir puentes para un mejor futuro.
                             ¡Los invito a esta aventura!</p>
-                        <div class="btnTexto animated fadeInRight" style="animation-delay: 1.5s">
+                        <div class="btnTexto animated fadeInLeft" style="animation-delay: 1.5s">
                             <a href="#" class="btn btn-dark justify-content-center" id="btn-ver">Ver Más</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-xxl-2 col-lg-4 col-md-5 col-sm-12 centrarImg">
-                    <img src="./images/andy1.jpg" class="imgAndy rounded animated fadeInRight"
+                    <img src="./images/andy1.jpg" class="imgAndy rounded animated fadeInLeft"
                         style="animation-delay: 2s" alt="AndyRojas">
                 </div>
             </div>
@@ -169,27 +170,29 @@
             <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
                 <h5>Servicios</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Asesoramiento Personal</a>
+                    <li class="nav-item mb-2"><a href="/servicios.html" class="nav-link p-0 ">Asesoramiento Personal</a>
                     </li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Capacitación para Empresas</a>
+                    <li class="nav-item mb-2"><a href="/servicios.html" class="nav-link p-0 ">Capacitación para Empresas</a>
                     </li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Entrevistas a
+                    <li class="nav-item mb-2"><a href="/servicios.html" class="nav-link p-0 ">Entrevistas a
                             Profesionales</a></li>
                 </ul>
             </div>
             <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
                 <h5>Blog</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Noticias de Actualidad</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Charlas a Empresas</a></li>
+                    <li class="nav-item mb-2"><a href="/blog.html" class="nav-link p-0">Noticias de Actualidad</a></li>
+                    <li class="nav-item mb-2"><a href="/blog.html" class="nav-link p-0 ">Charlas a Empresas</a></li>
                 </ul>
             </div>
             <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
                 <h5>Sobre Andy</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Mi experiencia laboral</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Mis Estudios</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Mis objetivos profesionales</a></li>
+                    <li class="nav-item mb-2"><a href="/sobreMi.html" class="nav-link p-0 ">Mi experiencia laboral</a>
+                    </li>
+                    <li class="nav-item mb-2"><a href="/sobreMi.html" class="nav-link p-0 ">Mis Estudios</a></li>
+                    <li class="nav-item mb-2"><a href="/sobreMi.html" class="nav-link p-0 ">Mis objetivos
+                            profesionales</a></li>
                 </ul>
             </div>
             <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
@@ -197,9 +200,13 @@
                 <ul class="nav flex-column">
                     <li class="mb-2">Seguime en mis redes sociales</li>
                     <ul class="list-unstyled d-flex">
-                        <li class="icon"><a class="link-light" href="https://www.linkedin.com/in/andrés-rojas-88244b132" target="about_blank"><i class="fab fa-linkedin" ></i></a></li>
-                        <li class="ms-3 icon"><a class="link-light" href="https://www.instagram.com/andyrojaspr/?hl=es-la" target="about_blank"><i class="fab fa-instagram"  ></i></a></li>
-                        <li class="ms-3 icon"><a class="link-light" href="/contacto.html"target="about_blank"><i class="fas fa-envelope-square" ></i></a>
+                        <li class="icon"><a class="link-light" href="https://www.linkedin.com/in/andrés-rojas-88244b132"
+                                target="about_blank"><i class="fab fa-linkedin"></i></a></li>
+                        <li class="ms-3 icon"><a class="link-light"
+                                href="https://www.instagram.com/andyrojaspr/?hl=es-la" target="about_blank"><i
+                                    class="fab fa-instagram"></i></a></li>
+                        <li class="ms-3 icon"><a class="link-light" href="/contacto.html" target="about_blank"><i
+                                    class="fas fa-envelope-square"></i></a>
                         </li>
                     </ul>
                 </ul>
