--- a/servicios.html
+++ b/servicios.html
@@ -50,16 +50,18 @@
     </header>
     <section class="container-fluid marginSection">
         <div class="row">
-            <h1 class="colorSecundario tituloServicios animated fadeIn" style="animation-delay: 0.5s">¿En qué puedo ayudarte?</h1>
+            <h1 class="colorSecundario tituloServicios animated fadeIn" style="animation-delay: 0.5s">¿En qué puedo
+                ayudarte?</h1>
             <div class="col-xxl-6 col-md-6 col-xs-12 marginAutoLR">
                 <div class="card">
-                    <h3 class="colorPrimario tituloServicios">Asesoramiento profesional</h3>
+                    <h3 class="colorPrimario tituloServicios2">Asesoramiento profesional</h3>
                     <div class="row">
                         <div class="col-xxl-6">
                             <img src="/images/servicio1.jpg" class="img-fluid rounded imagenServicios"
                                 alt="Asesoramiento">
                             <div class="btnServicios">
-                                <a href="/contacto.html" class="btn btn-dark justify-content-center">Solicitá tu asesoramiento</a>
+                                <a href="/contacto.html" class="btn btn-dark justify-content-center">Solicitá tu
+                                    asesoramiento</a>
                             </div>
                         </div>
                         <div class="col-xxl-6 columnaLista">
@@ -78,13 +80,14 @@
             </div>
             <div class="col-xxl-6 col-md-6 col-xs-12 marginAutoLR marginTop">
                 <div class="card">
-                    <h3 class="tituloServicios colorPrimario">Capacitaciones para<br> emprendimientos y empresas</h3>
+                    <h3 class="tituloServicios2 colorPrimario">Capacitaciones para<br> emprendimientos y empresas</h3>
                     <div class="row">
                         <div class="col-xxl-6">
                             <img src="/images/servicio2.jpg" class="img-fluid rounded imagenServicios"
                                 alt="Capacitaciones">
                             <div class="btnServicios">
-                                <a href="/contacto.html" class="btn btn-dark justify-content-center">Solicitá tu asesoramiento</a>
+                                <a href="/contacto.html" class="btn btn-dark justify-content-center">Solicitá tu
+                                    asesoramiento</a>
                             </div>
                         </div>
                         <div class="col-xxl-6 columnaLista">
@@ -139,27 +142,30 @@
             <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
                 <h5>Servicios</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Asesoramiento Personal</a>
+                    <li class="nav-item mb-2"><a href="/servicios.html" class="nav-link p-0 ">Asesoramiento Personal</a>
                     </li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Capacitación para Empresas</a>
+                    <li class="nav-item mb-2"><a href="/servicios.html" class="nav-link p-0 ">Capacitación para
+                            Empresas</a>
                     </li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Entrevistas a
+                    <li class="nav-item mb-2"><a href="/servicios.html" class="nav-link p-0 ">Entrevistas a
                             Profesionales</a></li>
                 </ul>
             </div>
             <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
                 <h5>Blog</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0">Noticias de Actualidad</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Charlas a Empresas</a></li>
+                    <li class="nav-item mb-2"><a href="/blog.html" class="nav-link p-0">Noticias de Actualidad</a></li>
+                    <li class="nav-item mb-2"><a href="/blog.html" class="nav-link p-0 ">Charlas a Empresas</a></li>
                 </ul>
             </div>
             <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
                 <h5>Sobre Andy</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Mi experiencia laboral</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Mis Estudios</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 ">Mis objetivos profesionales</a></li>
+                    <li class="nav-item mb-2"><a href="/sobreMi.html" class="nav-link p-0 ">Mi experiencia laboral</a>
+                    </li>
+                    <li class="nav-item mb-2"><a href="/sobreMi.html" class="nav-link p-0 ">Mis Estudios</a></li>
+                    <li class="nav-item mb-2"><a href="/sobreMi.html" class="nav-link p-0 ">Mis objetivos
+                            profesionales</a></li>
                 </ul>
             </div>
             <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
@@ -167,9 +173,13 @@
                 <ul class="nav flex-column">
                     <li class="mb-2">Seguime en mis redes sociales</li>
                     <ul class="list-unstyled d-flex">
-                        <li class="icon"><a class="link-light" href="https://www.linkedin.com/in/andrés-rojas-88244b132" target="about_blank"><i class="fab fa-linkedin" ></i></a></li>
-                        <li class="ms-3 icon"><a class="link-light" href="https://www.instagram.com/andyrojaspr/?hl=es-la" target="about_blank"><i class="fab fa-instagram"  ></i></a></li>
-                        <li class="ms-3 icon"><a class="link-light" href="/contacto.html"target="about_blank"><i class="fas fa-envelope-square" ></i></a>
+                        <li class="icon"><a class="link-light" href="https://www.linkedin.com/in/andrés-rojas-88244b132"
+                                target="about_blank"><i class="fab fa-linkedin"></i></a></li>
+                        <li class="ms-3 icon"><a class="link-light"
+                                href="https://www.instagram.com/andyrojaspr/?hl=es-la" target="about_blank"><i
+                                    class="fab fa-instagram"></i></a></li>
+                        <li class="ms-3 icon"><a class="link-light" href="/contacto.html" target="about_blank"><i
+                                    class="fas fa-envelope-square"></i></a>
                         </li>
                     </ul>
                 </ul>
