--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </section>
     <section id="notasCharlas" class="container-fluid marginSectionMenor marginTopMobile">
         <div class="row filaUltimas">
-            <h3 class="animated fadeIn" style="animation-delay: 3s">Últimas Novedades</h3>
+            <h3 class="animated fadeIn tituloNovedades" style="animation-delay: 3s">Últimas Novedades</h3>
             <div class="col-xxl-6 col-md-12 col-sm-12">
                 <div class="row">
                     <div class="col-xxl-6 col-md-6 col-sm-12">
