ultimos cambios mobile

--- a/contacto.html
+++ b/contacto.html
@@ -65,7 +65,9 @@
                         placeholder="Escriba su consulta o servicio que desee adquirir" required></textarea>
                     <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission" />
                 </fieldset>
-                <input class="enviarForm btn btn-dark justify-content-center" type="submit" value="Enviar" />
+                <div class="divBtnForm">
+                    <input class="enviarForm btn btn-dark" type="submit" value="Enviar" />
+                </div>
             </form>
         </div>
     </section>
@@ -74,11 +76,14 @@
             <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
                 <h5>Servicios</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="/servicios.html" class="nav-link p-0 ">Asesoramiento Profesional</a>
+                    <li class="nav-item mb-2"><a href="/servicios.html" class="nav-link p-0 ">Asesoramiento
+                            Profesional</a>
                     </li>
-                    <li class="nav-item mb-2"><a href="/servicios.html" class="nav-link p-0 ">Capacitación para Empresas</a>
+                    <li class="nav-item mb-2"><a href="/servicios.html" class="nav-link p-0 ">Capacitación para
+                            Empresas</a>
                     </li>
-                    <li class="nav-item mb-2"><a href="/servicios.html" class="nav-link p-0 ">Charlas en Universidades</a></li>
+                    <li class="nav-item mb-2"><a href="/servicios.html" class="nav-link p-0 ">Charlas en
+                            Universidades</a></li>
                 </ul>
             </div>
             <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
