--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="row ">
                 <div class="col-xxl-10 col-lg-8 col-md-7 col-sm-12 sinPadding">
                     <div class="card-body">
-                        <h5 class="card-title animated fadeInLeft" style="animation-delay: 0.5s">Bienvenidos a Sweet
+                        <h5 class="card-title animated fadeInLeft sinPadding" style="animation-delay: 0.5s">Bienvenidos a Sweet
                             Spot!
                         </h5>
                         <p class="card-text animated fadeInLeft" style="animation-delay: 1s">¡Hola! Después de un tiempo
