--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="col-xxl-6 col-md-12 col-sm-12">
                 <div class="row">
                     <div class="col-xxl-6 col-md-6 col-sm-12">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card cardInicio" style="width: 18rem;">
                             <img src="./images/nota1.jpeg" class="card-img-top" alt="imgNota1">
                             <div class="card-body">
                                 <h4>Cómo pensar una narrativa de triple impacto para conversar con la sociedad</h4>
@@ -108,7 +108,7 @@
                         </div>
                     </div>
                     <div class="col-xxl-6 col-md-6 col-sm-12 marginTopMobile">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card cardInicio" style="width: 18rem;">
                             <img src="./images/nota2.jpg" class="card-img-top" alt="imgNota2">
                             <div class="card-body">
                                 <h4>Una red colaborativa: El doble beneficio de nutrirse de colegas y aportar a la
@@ -130,7 +130,7 @@
             <div class="col-xxl-6 col-md-12 col-sm-12 marginTopMobile marginTopTablet">
                 <div class="row">
                     <div class="col-xxl-6 col-md-6 col-sm-12">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card cardInicio" style="width: 18rem;">
                             <img src="./images/charla1.jpg" class="card-img-top" alt="imgCharla1">
                             <div class="card-body">
                                 <h4>Issues Management y Comunicación de Crisis
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                     <div class="col-xxl-6 col-md-6 col-sm-12 marginTopMobile">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card cardInicio" style="width: 18rem;">
                             <img src="./images/charla2.jpg" class="card-img-top" alt="imgCharla2">
                             <div class="card-body">
                                 <h4>USAL - Liderazgo y conducción de equipos</h4>
@@ -167,7 +167,7 @@
     </section>
     <footer id="Footer" class="container-fluid justify-content-center">
         <div class="row marginAuto">
-            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
+            <div class="col-xxl-3 col-md-6 col-sm-6 paddingLeft pb-3">
                 <h5>Servicios</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="/servicios.html" class="nav-link p-0 ">Asesoramiento Profesional</a>
@@ -177,13 +177,13 @@
                     <li class="nav-item mb-2"><a href="/servicios.html" class="nav-link p-0 ">Charlas en Universidades</a></li>
                 </ul>
             </div>
-            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
+            <div class="col-xxl-3 col-md-6 col-sm-6 paddingLeft pb-3">
                 <h5>Blog</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="/blog.html" class="nav-link p-0">Noticias de Actualidad</a></li>
                 </ul>
             </div>
-            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
+            <div class="col-xxl-3 col-md-6 col-sm-6 paddingLeft pb-3">
                 <h5>Sobre Andy</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="/sobreMi.html" class="nav-link p-0 ">Mi Experiencia Laboral</a>
@@ -193,7 +193,7 @@
                             Profesionales</a></li>
                 </ul>
             </div>
-            <div class="col-xxl-3 col-md-6 col-sm-12 paddingLeft pb-3">
+            <div class="col-xxl-3 col-md-6 col-sm-6 paddingLeft pb-3">
                 <h5>Conectemos</h5>
                 <ul class="nav flex-column">
                     <li class="mb-2">Seguime en mis Redes Sociales</li>
