--- a/sobreMi.html
+++ b/sobreMi.html
@@ -19,7 +19,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand logo" href="/index.html"><img src="./images/logospot.png" width="120x100"
+                <a class="navbar-brand logo" href="./index.html"><img src="./images/logospot.png" width="120x100"
                         alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
@@ -29,19 +29,19 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html">Inicio</a>
+                            <a class="nav-link" href="./index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Sobre mi</a>
+                            <a class="nav-link active" aria-current="page" href="./sobreMi.html">Sobre mi</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/blog.html">Blog</a>
+                            <a class="nav-link" href="./blog.html">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/servicios.html">Servicios</a>
+                            <a class="nav-link" href="./servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/contacto.html">Contacto</a>
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
